# PMDG_Navdata

./: .gitignore  LICENSE  README.md  config.example.ini
native/: README.md
native/compare_databases/: Cargo.toml  main.rs
native/inibuilds_navdata_cli/: Cargo.toml  build.rs
native/inibuilds_navdata_cli/src/: main.rs
native/inibuilds_navdata_cli/src/airports/: runways.rs
native/inibuilds_navdata_cli/src/core/: db.rs  geo.rs  logging.rs  magnetic.rs  mod.rs  parsers.rs
native/inibuilds_navdata_cli/src/core/magcof/: README.md
native/inibuilds_navdata_cli/src/enroute/: airways.rs  epoints.rs  mod.rs  ndbs.rs  vhfs.rs
native/inibuilds_navdata_cli/src/terminal/: mod.rs  procedures.rs  tpoints.rs
native/pmdg_navdata_cli/: Cargo.toml
native/pmdg_navdata_cli/src/: main.rs
native/pmdg_navdata_cli/src/airports/: airports.rs  mod.rs  runways.rs
native/pmdg_navdata_cli/src/core/: db.rs  geo.rs  logging.rs  magnetic.rs  matchers.rs  mod.rs  parsers.rs
native/pmdg_navdata_cli/src/core/magcof/: README.md
native/pmdg_navdata_cli/src/enroute/: airways.rs  epoints.rs  gs.rs  mod.rs  ndbs.rs  vhfs.rs
native/pmdg_navdata_cli/src/terminal/: mod.rs  procedures.rs  tpoints.rs
