[package]
name = "pmdg_navdata_cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite-bundled"]
sqlite-bundled = ["rusqlite/bundled"]

[[bin]]
name = "pmdg_navdata_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
configparser = "3.1"
csv = "1.3"
encoding_rs = "0.8"
log = "0.4"
num-traits = "0.2"
pinyin = "0.11"
rayon = "1.10"
rusqlite = "0.39"
simplelog = "0.12"

[build-dependencies]
winres = "0.1"
